2.2.4/_sources/gallery/lines_bars_and_markers/broken_barh.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_broken_barh.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_broken_barh.py:


===========
Broken Barh
===========

Make a "broken" horizontal bar plot, i.e., one with gaps




.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_broken_barh_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import matplotlib.pyplot as plt

    fig, ax = plt.subplots()
    ax.broken_barh([(110, 30), (150, 10)], (10, 9), facecolors='blue')
    ax.broken_barh([(10, 50), (100, 20), (130, 10)], (20, 9),
                   facecolors=('red', 'yellow', 'green'))
    ax.set_ylim(5, 35)
    ax.set_xlim(0, 200)
    ax.set_xlabel('seconds since start')
    ax.set_yticks([15, 25])
    ax.set_yticklabels(['Bill', 'Jim'])
    ax.grid(True)
    ax.annotate('race interrupted', (61, 25),
                xytext=(0.8, 0.9), textcoords='axes fraction',
                arrowprops=dict(facecolor='black', shrink=0.05),
                fontsize=16,
                horizontalalignment='right', verticalalignment='top')

    plt.show()


.. _sphx_glr_download_gallery_lines_bars_and_markers_broken_barh.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: broken_barh.py <broken_barh.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: broken_barh.ipynb <broken_barh.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
